--- a/sample/src/main/res/layout/basic_usage.xml
+++ b/sample/src/main/res/layout/basic_usage.xml
@@ -4,18 +4,18 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Basic usage"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/setinstructions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Please create a key/pair entry. You can make an new entry by changing key's name." />
 
     <EditText
         android:id="@+id/key"
@@ -37,6 +37,12 @@
         android:layout_height="wrap_content"
         android:text="set key/value pair" />
 
+    <TextView
+        android:id="@+id/lookupinstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="You can get the values of your tables by providing the key." />
+
     <EditText
         android:id="@+id/keytolookup"
         android:layout_width="match_parent"
@@ -55,6 +61,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="look-up" />
+
+    <TextView
+        android:id="@+id/deleteinstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Finally you can delete a key." />
+
 
     <EditText
         android:id="@+id/keytodelete"
