complete example change

--- a/sample/src/main/res/layout/basic_usage.xml
+++ b/sample/src/main/res/layout/basic_usage.xml
@@ -35,7 +35,7 @@
         android:id="@+id/set"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="set key/value pair" />
+        android:text="set/update key" />
 
     <TextView
         android:id="@+id/lookupinstructions"
@@ -81,4 +81,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="delete" />
+
+    <TextView
+        android:id="@+id/dumpinstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Perform a database dump" />
+
+    <TextView
+        android:id="@+id/databasedumpKey"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/databasedumpValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/dump"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="dump db" />
+
+    <TextView
+        android:id="@+id/databasedrop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Perform a database drop. After droping the db try looking-up for a key you previously created to verify the is gone." />
+
+    <Button
+        android:id="@+id/drop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="drop dp" />
+
 </merge>
