--- a/sample/src/main/res/layout/row.xml
+++ b/sample/src/main/res/layout/row.xml
@@ -3,21 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tableraw"
     android:layout_width="match_parent"
-    android:layout_height="20dp"
+    android:layout_height="80dp"
     android:layout_margin="16dp"
-    android:layout_marginBottom="20dp"
-    android:gravity="center">
+    android:layout_marginBottom="20dp">
 
-    <TextView
-        android:id="@+id/printkey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/printvalue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp" />
+        <TextView
+            android:id="@+id/printkey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/printvalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp" />
+    </TableRow>
 
 </TableRow>
